feat: toggle saved resources
