# apps/api/src/modules/saved-resources/saved-resources.repository.ts
@@ -31,11 +31,68 @@ export class SavedResourcesRepository {
     });
   }
 
-  async remove(id: number) {
+  async delete(id: number) {
     return await this.prisma.savedResources.delete({
       where: {
         id,
       },
     });
+  }
+
+  async remove(userId: number, resourceId: number) {
+    return await this.prisma.savedResources.deleteMany({
+      where: {
+        resource_id: resourceId,
+        user_id: userId,
+      },
+    });
+  }
+
+  async findAllByUser(userId: number) {
+    const savedResources = await this.prisma.savedResources.findMany({
+      where: { user_id: userId },
+      include: {
+        resource: {
+          select: {
+            id: true,
+            title: true,
+            description: true,
+            publication_date: true,
+            authors: true,
+            keywords: true,
+            file_name: true,
+            file_format: true,
+            file_size: true,
+            preview_image_url: true,
+            citation: true,
+            additional_info: true,
+            updated_at: true,
+            created_at: true,
+            resource_type: {
+              select: {
+                id: true,
+                name: true,
+              },
+            },
+            category: {
+              select: {
+                id: true,
+                name: true,
+              },
+            },
+            uploaded_by: {
+              select: {
+                id: true,
+                first_name: true,
+                last_name: true,
+                email: true,
+              },
+            },
+          },
+        },
+      },
+    });
+
+    return savedResources;
   }
 }
